# work-at-codevance

./: Makefile  pyproject.toml  requirements.dev.txt  requirements.txt
core/: Procfile  celery.py  settings.py  urls.py  views.py
payments/: admin.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  utils.py  views.py
payments/migrations/: 0001_initial.py
